--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
